--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,6 @@
 body {
   font-family: "Roboto", sans-serif;
 }
-.custom-shadow {
-  box-shadow: 2px 4px 5px 0px rgba(0, 0, 0, 0.25);
+html {
+  scroll-behavior: smooth;
 }
