--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,11 @@ body {
 html {
   scroll-behavior: smooth;
 }
+.swiper-slide-prev {
+  scale: 0.6;
+  opacity: 0.7;
+}
+.swiper-slide-next {
+  scale: 0.6;
+  opacity: 0.7;
+}
